Arrumando layout botao login e cadastro

--- a/TESTE/TesteLogineCadastro/index.html
+++ b/TESTE/TesteLogineCadastro/index.html
@@ -12,12 +12,7 @@
     <div class="form-container sign-up-container">
       <form action="#">
         <h1>Criar Conta</h1>
-        <!-- <div class="social-container">
-          <a href="#" class="social">f</a>
-          <a href="#" class="social">G+</a>
-          <a href="#" class="social">in</a>
-        </div> -->
-        <span>ou use seu e-mail para registrar:</span>
+        <span>Use seu e-mail para registrar:</span>
         <input type="text" placeholder="Nome" />
         <input type="email" placeholder="E-mail" />
         <input type="password" placeholder="Senha" />
@@ -32,8 +27,10 @@
         <span>use sua conta</span>
         <input type="email" placeholder="E-mail" />
         <input type="password" placeholder="Senha" />
+        <br>
         <a href="#">Esqueceu sua senha?</a>
-        <button>Entrar</button>
+        <br><br>
+        <button >Entrar</button>
       </form>
     </div>
 
