Subindo o site + conexao db

--- a/Site/index.html
+++ b/Site/index.html
@@ -620,59 +620,55 @@
                     </div>
                 </div>
 
-                <!-- Contact Form -->
-                <div class="contact-form-section">
-                    <form class="contact-form" id="contactForm">
-                        <h3 class="form-title">Envie sua mensagem</h3>
+<!-- Contact Form -->
+<div class="contact-form-section">
+  <form class="contact-form" id="contactForm">
+    <h3 class="form-title">Envie sua mensagem</h3>
 
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="name" class="form-label">Nome completo *</label>
-                                <input type="text" id="name" name="name" class="form-input" placeholder="Seu nome"
-                                    required>
-                            </div>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="nome" class="form-label">Nome completo *</label>
+        <input type="text" id="nome" name="nome" class="form-input" placeholder="Seu nome" required>
+      </div>
 
-                            <div class="form-group">
-                                <label for="email" class="form-label">E-mail *</label>
-                                <input type="email" id="email" name="email" class="form-input"
-                                    placeholder="seu@email.com" required>
-                            </div>
-                        </div>
+      <div class="form-group">
+        <label for="email" class="form-label">E-mail *</label>
+        <input type="email" id="email" name="email" class="form-input" placeholder="seu@email.com" required>
+      </div>
+    </div>
 
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="phone" class="form-label">Telefone *</label>
-                                <input type="tel" id="phone" name="phone" class="form-input"
-                                    placeholder="(11) 99999-9999">
-                            </div>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="telefone" class="form-label">Telefone *</label>
+        <input type="tel" id="telefone" name="telefone" class="form-input" placeholder="(11) 99999-9999">
+      </div>
 
-                            <div class="form-group">
-                                <label for="subject" class="form-label">Assunto *</label>
-                                <select id="subject" name="subject" class="form-input" required>
-                                    <option value="">Selecione um assunto</option>
-                                    <option value="voluntario">Quero ser voluntário</option>
-                                    <option value="doacao">Quero fazer uma doação</option>
-                                    <option value="parceria">Proposta de parceria</option>
-                                    <option value="informacoes">Solicitar informações</option>
-                                    <option value="outro">Outro assunto</option>
-                                </select>
-                            </div>
-                        </div>
+      <div class="form-group">
+        <label for="assunto" class="form-label">Assunto *</label>
+        <select id="assunto" name="assunto" class="form-input" required>
+          <option value="">Selecione um assunto</option>
+          <option value="voluntario">Quero ser voluntário</option>
+          <option value="doacao">Quero fazer uma doação</option>
+          <option value="parceria">Proposta de parceria</option>
+          <option value="informacoes">Solicitar informações</option>
+          <option value="outro">Outro assunto</option>
+        </select>
+      </div>
+    </div>
 
-                        <div class="form-group">
-                            <label for="message" class="form-label">Mensagem *</label>
-                            <textarea id="message" name="message" class="form-textarea" rows="6"
-                                placeholder="Escreva sua mensagem aqui..." required></textarea>
-                        </div>
+    <div class="form-group">
+      <label for="mensagem" class="form-label">Mensagem *</label>
+      <textarea id="mensagem" name="mensagem" class="form-textarea" rows="6" placeholder="Escreva sua mensagem aqui..." required></textarea>
+    </div>
 
-                        <button type="submit" class="form-submit">
-                            <i data-lucide="send"></i>
-                            <span>Enviar Mensagem</span>
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </div>
+    <button type="submit" class="form-submit">
+      <i data-lucide="send"></i>
+      <span>Enviar Mensagem</span>
+    </button>
+  </form>
+</div>
+
+
     </section>
 
     <!-- Footer -->
@@ -817,3 +813,4 @@
 </body>
 
 </html>
+
