--- a/TESTE/TesteLogineCadastro/index.html
+++ b/TESTE/TesteLogineCadastro/index.html
@@ -10,27 +10,29 @@
   <div class="container" id="container">
     <!-- Formulário de Cadastro -->
     <div class="form-container sign-up-container">
-      <form action="#">
+      <form id="signupForm">
         <h1>Criar Conta</h1>
         <span>Use seu e-mail para registrar:</span>
-        <input type="text" placeholder="Nome" />
-        <input type="email" placeholder="E-mail" />
-        <input type="password" placeholder="Senha" />
-        <button>Cadastrar</button>
+        <input type="text" id="signupName" placeholder="Nome" required />
+        <input type="email" id="signupEmail" placeholder="E-mail" required />
+        <input type="password" id="signupPassword" placeholder="Senha" required />
+        <button type="submit">Cadastrar</button>
+        <p id="signupResponse" class="response"></p>
       </form>
     </div>
 
     <!-- Formulário de Login -->
     <div class="form-container sign-in-container">
-      <form action="#">
+      <form id="signinForm">
         <h1>Entrar</h1>
-        <span>use sua conta</span>
-        <input type="email" placeholder="E-mail" />
-        <input type="password" placeholder="Senha" />
+        <span>Use sua conta</span>
+        <input type="email" id="signinEmail" placeholder="E-mail" required />
+        <input type="password" id="signinPassword" placeholder="Senha" required />
         <br>
         <a href="#">Esqueceu sua senha?</a>
         <br><br>
-        <button >Entrar</button>
+        <button type="submit">Entrar</button>
+        <p id="signinResponse" class="response"></p>
       </form>
     </div>
 
@@ -51,6 +53,64 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script>
+    // Alternar entre login e cadastro (painel de sobreposição)
+    const container = document.getElementById('container');
+    document.getElementById('signUp').addEventListener('click', () => {
+      container.classList.add("right-panel-active");
+    });
+    document.getElementById('signIn').addEventListener('click', () => {
+      container.classList.remove("right-panel-active");
+    });
+
+    // Cadastro
+    const signupForm = document.getElementById('signupForm');
+    const signupResponse = document.getElementById('signupResponse');
+    signupForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = {
+        nome: document.getElementById('signupName').value,
+        email: document.getElementById('signupEmail').value,
+        senha: document.getElementById('signupPassword').value
+      };
+      try {
+        const res = await fetch('/auth/signup', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+        const json = await res.json();
+        signupResponse.innerText = json.message || JSON.stringify(json);
+        signupResponse.style.color = res.ok ? 'green' : 'red';
+      } catch (err) {
+        signupResponse.innerText = 'Erro: ' + err.message;
+        signupResponse.style.color = 'red';
+      }
+    });
+
+    // Login
+    const signinForm = document.getElementById('signinForm');
+    const signinResponse = document.getElementById('signinResponse');
+    signinForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = {
+        email: document.getElementById('signinEmail').value,
+        senha: document.getElementById('signinPassword').value
+      };
+      try {
+        const res = await fetch('/auth/signin', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+        const json = await res.json();
+        signinResponse.innerText = json.message || JSON.stringify(json);
+        signinResponse.style.color = res.ok ? 'green' : 'red';
+      } catch (err) {
+        signinResponse.innerText = 'Erro: ' + err.message;
+        signinResponse.style.color = 'red';
+      }
+    });
+  </script>
 </body>
 </html>
