--- a/SITE/index.html
+++ b/SITE/index.html
@@ -396,7 +396,7 @@
                     Sua contribuição, seja como voluntário ou doador, multiplica nosso impacto na comunidade
                 </p>
                 <div class="cta-buttons">
-                    <button class="btn btn-white" onclick="location.href='./VOLUNTARIOS/voluntario.html'">Seja Voluntário</button>
+                    <button class="btn btn-white" onclick="location.href='#contato'">Seja Voluntário</button>
                     <button class="btn btn-outline-white" onclick="location.href='./LOGIN-CADASTRO/Login.html'">Fazer Doação</button>
                 </div>
             </div>
