Subindo na pasta frontend

--- a/src/Entrega 2/Front End/Site-Alma-V6/ADM/Adm-Home.html
+++ b/src/Entrega 2/Front End/Site-Alma-V6/ADM/Adm-Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Adm-home.css">
+    <link rel="icon" type="image/png" href="../IMG/Logo Instituto Alma.png">
     <title>Dashboard Administrador</title>
 </head>
 <body>
@@ -40,9 +41,9 @@
 
     <script>
         const data = {
-            totalVoluntarios: 125,
-            valorTotal: "20.195,15",
-            totalDoadores: 60
+            totalVoluntarios: 167,
+            valorTotal: "1.535.000",
+            totalDoadores: 150
         };
 
         function carregarDados() {
