--- a/src/Entrega 2/Front End/Site-Alma-V6/index.html
+++ b/src/Entrega 2/Front End/Site-Alma-V6/index.html
@@ -71,7 +71,7 @@
                     <a href="#transparencia" class="nav-link">Transparência</a>
                     <a href="#contato" class="nav-link">Contato</a>
                     <a href="./LOGIN-CADASTRO/Login.html" class="nav-link">Entrar</a>
-                    <a href="#doe" class="nav-link-doar">DOAR</a>
+                    <a href="./LOGIN-CADASTRO/Login.html" class="nav-link-doar">DOAR</a>
                 </nav>
 
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -217,14 +217,14 @@
                     <div class="stat-icon">
                         <i data-lucide="users"></i>
                     </div>
-                    <div class="stat-number">5000+</div>
+                    <div class="stat-number">5284</div>
                     <div class="stat-label">Vidas Impactadas</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-icon">
                         <i data-lucide="target"></i>
                     </div>
-                    <div class="stat-number">50+</div>
+                    <div class="stat-number">"+50</div>
                     <div class="stat-label">Projetos Realizados</div>
                 </div>
                 <div class="stat-item">
@@ -547,19 +547,19 @@
 
                 <div class="financial-grid">
                     <div class="financial-item">
-                        <div class="financial-amount green">R$ 20.195,15</div>
+                        <div class="financial-amount green">R$ 1.535.000</div>
                         <div class="financial-label">Total Arrecadado</div>
                         <!-- <div class="financial-sublabel">Doações + Parcerias</div> -->
                     </div>
 
                     <div class="financial-item">
-                        <div class="financial-amount blue">R$ 2.633.000</div>
+                        <div class="financial-amount blue">R$ 1.485.000</div>
                         <div class="financial-label">Investido em Projetos</div>
                         <!-- <div class="financial-sublabel">92.5% do total arrecadado</div> -->
                     </div>
 
                     <div class="financial-item">
-                        <div class="financial-amount orange">R$ 214.000</div>
+                        <div class="financial-amount orange">R$ 50.000</div>
                         <div class="financial-label">Custos Administrativos</div>
                         <!-- <div class="financial-sublabel">7.5% do total arrecadado</div> -->
                     </div>
@@ -732,10 +732,10 @@
                 <div class="footer-section-2">
                     <h4 class="footer-section-2-title">Como Ajudar</h4>
                     <ul class="footer-links">
-                        <li><a href="#" class="footer-link">Seja Voluntário</a></li>
-                        <li><a href="#" class="footer-link">Faça uma Doação</a></li>
-                        <li><a href="#" class="footer-link">Parcerias</a></li>
-                        <li><a href="#" class="footer-link">Divulgue Nosso Trabalho</a></li>
+                        <li><a href="#contato" class="footer-link">Seja Voluntário</a></li>
+                        <li><a href="./LOGIN-CADASTRO/Login.html" class="footer-link">Faça uma Doação</a></li>
+                        <li><a href="#contato" class="footer-link">Parcerias</a></li>
+                        <li><a href="#contato" class="footer-link">Divulgue Nosso Trabalho</a></li>
                     </ul>
                 </div>
             </div>
@@ -775,7 +775,7 @@
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
                     <p class="copyright">
-                        © 2024 Transformando. Todos os direitos reservados.
+                        © 2025 Transformando. Todos os direitos reservados.
                     </p>
 
                     <div class="footer-legal">
