--- a/src/Entrega 2/Front End/Site-Alma-V6/LOGIN-CADASTRO/Login.html
+++ b/src/Entrega 2/Front End/Site-Alma-V6/LOGIN-CADASTRO/Login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login / Cadastro</title>
   <link rel="stylesheet" href="Login.css">
+    <link rel="icon" type="image/png" href="../IMG/Logo Instituto Alma.png">
 </head>
 <body>
   <div class="container" id="container">
@@ -146,7 +147,7 @@
             if (data.email.endsWith('@alma.com')) {
               window.location.href = '../ADM/ADM-Home.html';
             } else {
-              window.location.href = '../DOACAO/DOEEE.HTML';
+              window.location.href = '../DOACAO/Doacao.html';
             }
           }, 1500);
         } else {
