--- a/src/Entrega 2/Front End/Site-Alma-V6/LOGIN-CADASTRO/recuperarsenha.html
+++ b/src/Entrega 2/Front End/Site-Alma-V6/LOGIN-CADASTRO/recuperarsenha.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="recuperarsenha.css">
+  <link rel="icon" type="image/png" href="../IMG/Logo Instituto Alma.png">
   <title>Recuperar Senha</title>
 </head>
 <body>
